lsn05_network/redmine_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: redmine-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - host: local.host
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: redmine
                            port:
                                number: 3000
